@@ -7,8 +7,10 @@ import java.util.stream.Collectors;
 import org.apache.commons.lang3.NotImplementedException;
 import org.opentripplanner.core.model.id.FeedScopedId;
 import org.opentripplanner.street.model.edge.Edge;
+import org.opentripplanner.street.model.edge.StreetEdge;
+import org.opentripplanner.street.model.edge.StreetTransitEntityLink;
 import org.opentripplanner.street.model.edge.TemporaryFreeEdge;
-import org.opentripplanner.street.model.edge.TemporaryPartialStreetEdge;
+import org.opentripplanner.street.model.vertex.TransitStopVertex;
 import org.opentripplanner.street.model.vertex.Vertex;
 
 class StreetSummarizer {
@@ -20,7 +22,7 @@ class StreetSummarizer {
 
   static String summarizeEdge(Edge e) {
     return switch (e) {
-      case TemporaryPartialStreetEdge tpe -> String.format(
+      case StreetEdge tpe -> String.format(
         "%s → %s %s ♿%s",
         summarizeVertex(e.getFromVertex()),
         summarizeVertex(e.getToVertex()),
@@ -32,6 +34,11 @@ class StreetSummarizer {
         summarizeVertex(e.getFromVertex()),
         summarizeVertex(e.getToVertex())
       );
+      case StreetTransitEntityLink link -> String.format(
+        "%s linked to %s",
+        summarizeVertex(link.getFromVertex()),
+        summarizeVertex(link.getToVertex())
+      );
       default -> throw new NotImplementedException(
         "No summary for edge " + e.getClass().getSimpleName()
       );
@@ -41,10 +48,11 @@ class StreetSummarizer {
   static String summarizeVertex(Vertex v) {
     var buf = new StringBuilder();
 
-    var coord = String.format(
-      "(%s,%s)".formatted(DECIMAL_FORMAT.format(v.getLat()), DECIMAL_FORMAT.format(v.getLon()))
-    );
+    var coord = String.format("(%s,%s)".formatted(format(v.getLat()), format(v.getLon())));
     buf.append(coord);
+    if (v instanceof TransitStopVertex tsv) {
+      buf.append("[%s]".formatted(tsv.getId()));
+    }
 
     if (!v.areaStops().isEmpty()) {
       var ids = v
@@ -57,6 +65,11 @@ class StreetSummarizer {
     }
 
     return buf.toString();
+  }
+
+  private static String format(double value) {
+    var s = DECIMAL_FORMAT.format(value);
+    return "-0".equals(s) ? "0" : s;
   }
 
   private static String summarizeBoolean(boolean b) {
